# MSR_Challenge_2024

./: .gitignore  LICENSE  README.md  dvc.yaml  init.bash  pyproject.toml  requirements.txt  setup.py
.dvc/: config
data/: .gitignore
data/interim/: .gitignore
notebooks/: .gitignore  README.md  analyze_changes_survival.ipynb  analyze_commit_sharings_agg.ipynb  characteristics_of_the_software_repository.ipynb  compare-ret_fragments_commit.json.dvc  compare-ret_fragments_issue.json.dvc  compare-ret_fragments_pr.json.dvc  compare-ret_fragments_pr_all.json.dvc  compare.ipynb  evolution_of_chatgpt_generated_code.ipynb  matching_lines.json  repositories.ipynb  repository statistics - diagrams.ipynb  repository_statistics_20231012_commit.json  repository_statistics_20231012_pr.json  survival.ipynb  survival_diagrams.ipynb
reports/: README.md
reports/figures/: README.md  infographics-flow_diagram.mermaid
scripts/data/: check_merged_commits.py  commit_sharings_to_agg.py  compute_changes_survival.py  compute_repository_statistics_git.py  compute_repository_statistics_github.py  download_repositories.py  file_sharings_to_agg.py  find_chatgpt_changes_similarities.py  issue_sharings_to_agg.py  pr_sharings_to_agg.py
src/: api_keys.info
src/data/: check_merged_commits.py  check_repository_statistics.py  commit_sharings_to_agg.py  common.py  compute_changes_survival.py  compute_repository_statistics_git.py  download_repositories.py  sharings.py
src/notebooks/: README.md  survival.py
src/tests/: __init__.py  test_utils_compare.py  test_utils_files.py  test_utils_git.py  (+2 more)
(+8 files in other folders)
