[project]
name = "src"
version = "0.1.0"
description = "Code for MSR'24 Mining Challenge: https://2024.msrconf.org/track/msr-2024-mining-challenge"
authors = [
    {name = 'NCU-SI'}
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
